# Vivid

./: CMakeLists.txt
Experimental/: CMakeLists.txt
bindings/python/: CMakeLists.txt  Director.cc  Director.cpp  Timer.cc  Timer.cpp  py_module.cpp
bindings/python/py_vivid/: py_Director.cc  py_Node.cc  py_NodeTree.cc  py_Scene.cc  py_Singleton.cc
source/: CMakeLists.txt  main.cpp
source/base/: Assert.h  Director.cpp  Director.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  Globals.h  InterfaceHeaderMacros.h  InterfaceSourceMacros.h  Platform.h  Ref.cpp  Ref.h  RefPtr.hpp  Scheduler.cpp  Scheduler.h  Singleton.hpp  String.cpp  String.h  Timer.cpp  Timer.h  Types.h  UniqueString.cpp  UniqueString.h  Variant.cpp  Variant.h
source/common/: Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationState.cpp  AnimationState.h  BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Camera.cpp  Camera.h  ClassType.hpp  Clone.cpp  Clone.h  Component.cpp  Component.h  ComponentContainer.cpp  ComponentContainer.h  CopyOperator.cpp  CopyOperator.h  Frustum.cpp  Frustum.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshFilter.cpp  MeshFilter.h  MeshRender.cpp  MeshRender.h  Node.cpp  Node.h  NodeUpdater.cpp  NodeUpdater.h  NodeVisitor.cpp  NodeVisitor.h  Object.cpp  (+26 more)
source/io/: FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  MeshLoader.cpp  MeshLoader.h  ResourceLoader.cpp  ResourceLoader.h
source/math/: MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
source/renderer/: RenderInterface.cpp  RenderInterface.h  RenderWorld.cpp  RenderWorld.h  TextureStreamMsg.cpp
source/renderer/Device/: GLRenderDevice.cpp  GLRenderDevice.h  RenderContext.h  RenderDevice.cpp  RenderDevice.h  VkRenderContext.cpp  VkRenderDevice.cpp  readme.md
source/renderer/Resource/: RenderCameraObject.cpp  RenderCameraObject.h  RenderMaterialObject.cpp  RenderMaterialObject.h  RenderResourceContext.cpp  RenderResourceContext.h  RenderResourceGenerator.cpp  RenderShaderObject.cpp  RenderShaderObject.h  RenderTexture.cpp  RenderTexture.h  RenderTextureObject.cpp  RenderTextureObject.h  ShaderObject.h  Texture.h
source/renderer/Runtime/: CameraStreamMsg.cpp  MaterialStreamMsg.cpp  NodeStreamMsg.cpp  RenderNodeObject.cpp  RenderNodeObject.h  ShaderStreamMsg.cpp  TextureStreamMsg.cpp
source/renderer/device/: CommandStream.h  GLRenderDevice.cpp  GLRenderDevice.h  GPUObjectManager.cpp  GPUObjectManager.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h
source/renderer/device_new/: GLRenderDevice.h  VkRenderDevice.h
source/renderer/resource/: Buffer.cpp  Buffer.h  HandleObjects.hpp  Image.h  PipelineResource.cpp  PipelineResource.h  RenderMeshObject.cpp  RenderMeshObject.h  RenderObject.h  RenderResource.cpp  RenderResource.h  RenderResourceContext.cpp  RenderResourceContext.h  RenderResourceGenerator.cpp  RenderResourceGenerator.h  RenderResourceManager.cpp  RenderResourceManager.h  ResourceStream.h  ShaderDataType.h  ShaderObject.h  ShaderUniform.cpp  ShaderUniform.h  VertexDeclaration.cpp  VertexDeclaration.h  VertexLayout.cpp  VertexLayout.h  VertexLayoutType.h
source/renderer/resource_new/: PipelineResource.cpp  RenderResourceGenerator.h  VertexLayout.h
source/renderer/runtime/: MeshStreamMsg.cpp  RenderCamera.cpp  RenderCamera.h  RenderMeshObject.cpp  RenderMeshObject.h  RenderObjectManager.cpp  RenderObjectManager.h  RenderShaderObject.cpp  RenderShaderObject.h  RenderTextureObject.cpp  RenderTextureObject.h  StateStream.cpp  StateStream.h  TextureStreamMsg.cpp
source/renderer/runtime_new/: RenderObjectManager.h
source/shape/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Frustum.cpp  Frustum.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h
source/test/: TestCreateNode.h  TestCustomAllocator.h  TestDirector.h  TestSceneGraph.h  TestTransform.h
source/vivid/: CMakeLists.txt  main.cpp
source/vivid/base/: Assert.h  Director.cpp  Director.h  EnumOperator.hpp  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.cpp  EventListener.h  Platform.h  Ref.cpp  Ref.h  RefPtr.hpp  Singleton.hpp  String.cpp  String.h  Timer.cpp  Timer.h  Types.h  Variant.cpp  Variant.h
source/vivid/common/: Camera.cpp  Camera.h  ClassType.hpp  Clone.cpp  Clone.h  Component.cpp  Component.h  ComponentContainer.cpp  ComponentContainer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRender.cpp  MeshRender.h  Node.cpp  Node.h  NodeVisitor.cpp  NodeVisitor.h  Pipeline.cpp  Pipeline.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SpaceState.cpp  SpaceState.h  Texture.cpp  Texture.h  Uploader.cpp  Uploader.h
source/vivid/io/: FileUtils.cpp  FileUtils.h  Logger.h  (+3 more)
tools/ColladaConverter/: CMakeLists.txt  converter.cpp  converter.h  daeCommon.h  daeLibAnimations.h  daeLibControllers.h  daeLibEffects.h  daeLibGeometries.h  daeLibImages.h  daeLibMaterials.h  daeLibNodes.h  daeLibVisualScenes.h  daeMain.cpp  daeMain.h  main.cpp  optimizer.cpp  optimizer.h  utMath.h  utPlatform.h  utXML.h  utils.cpp  utils.h
(+280 files in other folders)
