
add_executable(ColladaConv 
    converter.h
    daeCommon.h
    daeLibAnimations.h
    daeLibControllers.h
    daeLibEffects.h
    daeLibGeometries.h
    daeLibImages.h
    daeLibMaterials.h
    daeLibVisualScenes.h
    daeLibNodes.h
    daeMain.h
    optimizer.h
    utils.h
    rapidxml.h
    rapidxml_print.h
    utDebug.h
    utMath.h
    utPlatform.h
    utXML.h
    converter.cpp
    daeMain.cpp
    main.cpp
    optimizer.cpp
    utils.cpp

    )

